# PEA1

./: CMakeLists.txt  FIle_manager.cpp  File_manager.hpp  Main.cpp  Main.hpp  TSP.cpp  TSP.hpp  config.txt  results.csv
include/: format.h  workbook.h  xlsxwriter.h
include/xlsxwriter/: app.h  chart.h  core.h  packager.h  rich_value.h  styles.h  worksheet.h
libs/: xlsxwriter.lib
